testsuite/escript/classes/fail-super-varargs.err
fail-super-varargs.src:18:48: error: In call to 'super': Too many arguments passed.  Expected 5, got 6.